SchroedingerEquation/x64/Debug/Parameters.log
  MethodsBisectionSchroedinger.cpp
D:\Uni\SEMESTERS\MS\I\Lasers\I\SpecialFunctions\SchroedingerEquation\Parameters.h(3): error : cannot open source file "armadillo"
    #include <armadillo>
                        ^
  
